# DevOps-Course-Starter

./: .dockerignore  .env.template  .env.test  .gitignore  .terraform.lock.hcl  .travis.yml  Dockerfile  Dockerfile.ci  Dockerfile.test  Dockerfile.test.base  README.md  ToDoItem.py  Vagrantfile  app.py  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  flask_config.py  gunicorn.conf.py  main.tf  outputs.tf  pyproject.toml  requirements.txt  routes.py  session_items.py  setup.sh  trello_client.py  variables.tf  wsgi.py
app/: __init__.py  auth.py  flask_config.py  mongo_client.py  routes.py  trello_client.py
app/templates/: index.html  layout.html
app/view_models/: __init__.py  items.py
mock_trello_requests/: cards.py  lists.py
scripts/: deploy.sh  run_tests.sh  run_tests_watch.sh
templates/: index.html
tests/: test_app.py  test_items_view_model.py
tests/mock_data/: items.py
tests_e2e/: test_app.py
view_models/: __init__.py  items.py
