[tool.poetry]
name = "devops-course-starter"
version = "0.1.0"
description = ""
authors = ["Joel Wee <joel.wee@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.14.0"
gunicorn = "^20.0.4"
pymongo = "^3.11.3"
dnspython = "^2.1.0"
flask-pymongo = "^2.3.0"
oauthlib = "^3.1.0"
flask-login = "^0.5.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"
pytest = "^6.0.1"
mockupdb = "^1.8.0"
watchdog = { version = "^0.10.3"}
pyyaml = { version = "^5.3.1"}
rope = { version = "^0.17.0"}
flake8 = { version = "^3.8.3"}
autopep8 = { version = "^1.5.5"}
black = { version = "^20.8b1"}

[tool.poetry.extras]
linting = ["rope", "flake8", "autopep8", "black"]
test_watch = ["watchdog", "pyyaml"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
